tests/snapshots/output/metrics__create_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics create --name 'Demo metric' --definition [home]/demo.query.json --json
exit: 0
--- stdout ---
{
  "data": {
    "id": "8b3e4c1a-3333-4c3b-9a7e-000000000003",
    "access_scope": "workspace",
    "account_id": "acct-alpha",
    "name": "Demo metric",
    "description": "Return on ad spend",
    "definition": {
      "version": 2,
      "reportType": "segmentation"
    },
    "designated_breakdowns": [],
    "format": "multiplier",
    "higher_is_better": true,
    "icon_color": "emerald",
    "icon_name": "gauge",
    "owner_user_id": null,
    "unit": "x",
    "status": "draft",
    "verified_at": null,
    "verified_by": null,
    "created_at": "2026-01-02T08:00:00.000Z",
    "created_by": null,
    "updated_at": "2026-01-02T08:00:00.000Z",
    "updated_by": null
  }
}
