tests/snapshots/output/metrics__delete.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics delete 6f1c2a9e-1111-4c3b-9a7e-000000000001 --yes
exit: 0
--- stdout ---

✓ Metric deleted
