tests/snapshots/output/metrics__get.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics get 6f1c2a9e-1111-4c3b-9a7e-000000000001
exit: 0
--- stdout ---

ROAS

  ID:           6f1c2a9e-1111-4c3b-9a7e-000000000001
  Format:       multiplier
  Status:       active
  Updated:      1/5/2026
  Description:  Return on ad spend
  Unit:         x
  Higher=Better: yes
  Calculation:  segmentation
