tests/snapshots/output/metrics__update.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics update 6f1c2a9e-1111-4c3b-9a7e-000000000001 --description 'Return on ad spend'
exit: 0
--- stdout ---

✓ Metric "ROAS" updated
